--- a/app/src/main/res/layout/content_view_list.xml
+++ b/app/src/main/res/layout/content_view_list.xml
@@ -13,15 +13,6 @@
     tools:context="com.example.harrisonj2.shoppinglist.ViewListActivity"
     tools:showIn="@layout/activity_view_list">
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/shoppingListView"
-        android:choiceMode="singleChoice"
-        android:layout_below="@+id/sortByNameButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="34dp" />
-
     <ImageButton
         android:src="@drawable/p_name"
         android:background="@color/background"
@@ -43,9 +34,9 @@
         android:layout_height="wrap_content"
         android:text="Sort by quantity"
         android:id="@+id/sortByQuantityButton"
-        android:layout_above="@+id/shoppingListView"
-        android:layout_centerHorizontal="true"
-        android:onClick="orderByStore" />
+        android:onClick="orderByStore"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <ImageButton
         android:src="@drawable/p_date"
@@ -55,9 +46,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/sortByCostButton"
         android:text="Sort by cost"
-        android:layout_above="@+id/shoppingListView"
-        android:layout_alignEnd="@+id/shoppingListView"
-        android:onClick="orderByDate" />
+        android:onClick="orderByDate"
+        android:layout_alignParentTop="true"
+        android:layout_alignEnd="@+id/shoppingListView" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -88,4 +79,37 @@
         android:textColor="#ffffff"
         android:layout_below="@+id/sortByCostButton"
         android:layout_alignEnd="@+id/sortByCostButton" />
+
+    <ImageButton
+        android:src="@drawable/p_back"
+        android:background="@color/background"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Go Back"
+        android:id="@+id/imageButton"
+        android:layout_column="1"
+        android:onClick="goBackCreate"
+        android:layout_above="@+id/textView"
+        android:layout_alignStart="@+id/sortByDateText2" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/shoppingListView"
+        android:choiceMode="singleChoice"
+        android:layout_marginTop="84dp"
+        android:layout_below="@+id/sortByNameText3"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Go Back"
+        android:id="@+id/textView"
+        android:layout_column="1"
+        android:textColor="#ffffff"
+        android:textAlignment="center"
+        android:layout_alignTop="@+id/shoppingListView"
+        android:layout_alignStart="@+id/sortByCostButton" />
 </RelativeLayout>
