--- a/app/src/main/res/layout/content_open_list.xml
+++ b/app/src/main/res/layout/content_open_list.xml
@@ -74,9 +74,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/itemListView"
         android:textColor="@color/white"
-        android:layout_marginTop="102dp"
-        android:layout_below="@+id/costTextView"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="false"
+        android:layout_below="@+id/textView2" />
 
     <TextView
         android:layout_width="wrap_content"
