--- a/app/src/main/res/layout/content_view_list.xml
+++ b/app/src/main/res/layout/content_view_list.xml
@@ -92,15 +92,6 @@
         android:layout_above="@+id/textView"
         android:layout_alignStart="@+id/sortByDateText2" />
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/shoppingListView"
-        android:choiceMode="singleChoice"
-        android:layout_marginTop="84dp"
-        android:layout_below="@+id/sortByNameText3"
-        android:layout_alignParentStart="true" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -112,4 +103,15 @@
         android:textAlignment="center"
         android:layout_alignTop="@+id/shoppingListView"
         android:layout_alignStart="@+id/sortByCostButton" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/shoppingListView"
+        android:choiceMode="singleChoice"
+        android:layout_marginTop="84dp"
+        android:layout_below="@+id/sortByNameText3"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentEnd="false" />
+
 </RelativeLayout>
